--- a/AcousticFWI/TTI_3d_simplified.ipynb
+++ b/AcousticFWI/TTI_3d_simplified.ipynb
@@ -241,7 +241,7 @@
    },
    "outputs": [],
    "source": [
-    "stencilp = s**2/m*( (2 - e/s) * p(x, y, z, t) - (m/s**2 + e/s)*p(x, y, z, t-s) + A * (Gxxp + Gyyp) + B * Gzzr)"
+    "stencilp = 2 * s**2 / (2 * m + s * damp) * (2 * m / s**2 * p(x, y, z, t) + (s * damp - 2 * m) / (2 * s**2) * p(x, y, z, t-s) + A * (Gxxp + Gyyp) + B * Gzzr) "
    ]
   },
   {
@@ -275,7 +275,7 @@
    },
    "outputs": [],
    "source": [
-    "stencilr = s**2/m*( (2 - e/s) * r(x, y, z, t) - (m/s**2 + e/s)*r(x, y, z, t+s) + A * (Gxxp + Gyyp) +  Gzzr)"
+    "stencilr =  2 * s**2 / (2 * m + s * damp) * (2 * m / s**2 * r(x, y, z, t) + (s * damp - 2 * m) / (2 * s**2) * r(x, y, z, t-s) + B * (Gxxp + Gyyp) + Gzzr) "
    ]
   },
   {
@@ -307,9 +307,7 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": [
-    "#stencilr"
-   ]
+   "source": []
   }
  ],
  "metadata": {
